[tool.poetry]
name = "shihab"
version = "0.1.0"
description = ""
authors = ["Ebrahim Alkhamesi <ebrahemkreem40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = {extras = ["all"], version = "^0.114.2"}
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
marshmallow = "^3.22.0"
neo4j = "^5.24.0"
pandas = "^2.2.2"
passlib = "^1.7.4"
pydantic = "^2.9.1"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.34"
jose = "^1.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
